--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -23,6 +23,7 @@ button.register-button{
   background-clip: text;
   -webkit-background-clip: text;
   text-decoration: none;
+  color:transparent;
   height: 36px;
   width: 64px;
   border: none;
